# jnipp

./: .gitignore  .mailmap  Android.bp  CMakeLists.txt  LICENSE  README.md  build.gradle  internal.cpp  internal.h  jnipp.cpp  jnipp.h  jnipp.sln  jnipp.vcxproj  jnipp.vcxproj.filters  makefile  proclamation.json  types.h
.github/workflows/: jnipp.yml
android/: CMakeLists.txt
tests/: CMakeLists.txt  main.cpp  testing.h  tests.vcxproj
